# azure_rag_test

./: CLAUDE.md  README.md  RULES.md  architecture_design.md  docker-compose.yml  implementation_plan.md  ingest_local.py  main.py  pyproject.toml  walkthrough.md
ai_evals/: README.md  main.py  pyproject.toml  temp.txt
ai_evals/.deepeval/: .deepeval_telemetry.txt
ai_evals/ci/: deepeval-ci.yaml  promptfooconfig.yaml
ai_evals/ci/deepeval_tests/: test_rag_relevance.py
ai_evals/eval/: README.md  baseline.py  conftest.py  dataset.jsonl  eval_config.yaml  sut.py  test_eval.py
ai_evals/harness/: accuracy.py  cost.py  data_loader.py  metrics.py  reporter.py  viz.py
ai_evals/harness/archive/: README.md  faithfulness.py  judges.py  pipeline.py  runners.py  safety.py  triad.py
ai_evals/hooks/: pre-push  setup_hooks.sh
ai_evals/otel/: tracer_setup.py
ai_evals/rubrics/: groundedness.yaml
docs/: bawn_lima.txt  bawn_london.txt  bawn_moscow.txt  bawn_nairobi.txt  bawn_paris.txt  bawn_rio.txt  bawn_rome.txt  bawn_tokyo.txt
reports/latest/: .~lock.summary.csv#  report.html  summary.csv  summary.json
scripts/: check_weaviate.py
src/ingestion/: function_app.py  indexer.py  requirements.txt
src/webapp/: app.py  embeddings.py  rag_engine.py  requirements.txt
src/webapp/templates/: index.html
